2005-02-23  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/legacy/glue.py:
	* src/legacy/icqt.py:
	Added lang import.

	* src/jabw.py:
	Added check in error type handler.

2005-02-20  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	* src/debug.py:
	* src/main.py:
	* src/misciq.py:
	* src/disco.py:
	* src/register.py:
	* src/config.py:
	* config_example.xml:
	* src/xdb.py:
	Updated with PyMSN changes between 0.8 and 0.9.

	* src/utils.py:
	Added doPath function.

	* PyICQt:
	* src/main.py:
	Removed most of wrapper script and added internal pid handling.

	* src/tests:
	Removed since I don't use it.

	* src/main.py:
	Switched to auto-restart with proper process name.

	* config_example.xml:
	Adjusted to change the way sessionGreeting is handled.

	* src/lang.py:
	Removed all sessiongreeting references.

	* src/lang.py:
	* src/jabw.py:
	* src/session.py:
	* src/groupchat.py:
	* src/main.py:
	Removed groupchat handling.  (no groupchat for ICQ)

	* src/tlib/oscar.py:
	Cleaned up stdout debug messages.

	* src/lang.py:
	Punt to english of all else fails.

2005-02-19  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/utils.py:
	Added utf8encode.

	* src/jabw.py:
	Switched to new unicode translator function.

2005-02-17  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/session.py:
	Fixed poor stats reference.

	* src/legacy/icqt.py:
	Added check for whether buddy list is actually non-existant.

2005-02-16  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Changed unicode handling some.

	* src/disco.py:
	* src/tlib/oscar.py:
	Added test for readiness.

	* src/stats.py:
	* src/main.py:
	* src/session.py:
	* src/legacy/icqt.py:
	* src/webadmin/handler.py:
	Switched to new stats handler.

	* src/webadmin/handler.py:
	Passwords are now hidden.

2005-02-15  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/jabw.py:
	Added unicode conversion.

2005-02-10  Daniel Henninger  <jadestorm@nc.rr.com>

	* src/debug.py:
	* src/main.py:
	* src/config.py: